--- a/reservations.html
+++ b/reservations.html
@@ -114,86 +114,83 @@
   <section class="search-section">
     <input type="text" id="searchInput" placeholder="Search reservations...">
   </section>
-
-  <!-- Confirmed Reservations -->
-  <section class="reservations-section">
-    <h2 class="section-title"><span style="color:#28a745;">&#10003;</span> Confirmed Reservations</h2>
-    <div class="reservations-container" id="confirmedReservations">
-      <div class="res-card">
-        <div class="res-info">
+<section class="reservations-section">
+  <h2 class="section-title"><span style="color:#28a745;">&#10003;</span> Confirmed Reservations</h2>
+  <div class="reservations-container" id="confirmedReservations">
+    <div class="res-card">
+      <div class="res-info">
         <h3>Ritz-Carlton Hotel</h3>
         <p>Location: Riyadh</p>
         <p>Check-in: Dec 10, 2025</p>
         <p>Stay: 3 Nights</p>
         <p>Total Paid: 1200 SAR</p>
         <p>Status: <span style="color:#28a745;">&#10003;</span> Confirmed & Paid</p>
-        </div>
-        <div class="res-actions">
-          <button class="cancel-btn">Cancel</button>
-        </div>
       </div>
+      <div class="res-actions">
+        <button class="cancel-btn">Cancel</button>
+      </div>
+    </div>
 
-      <div class="res-card">
-        <div class="res-info">
-        <h3>Maraya Social Restaurant</h3>
-        <p>Location: AlUla</p>
+    <div class="res-card">
+      <div class="res-info">
+        <h3>Najd Village Restaurant</h3>
+        <p>Location: Riyadh</p>
         <p>Date: Jan 13, 2026</p>
         <p>Guests: 2</p>
         <p>Total Paid: 450 SAR</p>
         <p>Status: <span style="color:#28a745;">&#10003;</span> Confirmed & Paid</p>
-        </div>
-        <div class="res-actions">
-          <button class="cancel-btn">Cancel</button>
-        </div>
+      </div>
+      <div class="res-actions">
+        <button class="cancel-btn">Cancel</button>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Pending Reservations -->
-  <section class="reservations-section">
-    <h2 class="section-title">💳 Pending Reservations</h2>
-    <div class="reservations-container" id="pendingReservations">
-      <div class="res-card">
-        <div class="res-info">
-          <h3>Ritz-Carlton Hotel</h3>
-          <p>Riyadh | Check-in: Dec 10, 2025</p>
-          <p>Amount Due: 1200 SAR</p>
-        </div>
-        <div class="res-actions">
-          <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
-          <button class="cancel-btn">Cancel</button>
-        </div>
+<section class="reservations-section">
+  <h2 class="section-title">💳 Pending Reservations</h2>
+  <div class="reservations-container" id="pendingReservations">
+    <div class="res-card">
+      <div class="res-info">
+        <h3>Ritz-Carlton Hotel</h3>
+        <p>Riyadh | Check-in: Dec 10, 2025</p>
+        <p>Amount Due: 1200 SAR</p>
       </div>
-
-      <div class="res-card">
-        <div class="res-info">
-          <h3>AlUla Culture Event</h3>
-          <p>AlUla | Jan 12, 2026</p>
-          <p>Reservation Required</p>
-        </div>
-        <div class="res-actions">
-          <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
-          <button class="cancel-btn">Cancel</button>
-        </div>
-      </div>
-
-      <div class="res-card">
-        <div class="res-info">
-          <h3>Maraya Social Restaurant</h3>
-          <p>AlUla | Dinner for 2 | Jan 13, 2026</p>
-          <p>Amount Due: 450 SAR</p>
-        </div>
-        <div class="res-actions">
-          <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
-          <button class="cancel-btn">Cancel</button>
-        </div>
+      <div class="res-actions">
+        <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
+        <button class="cancel-btn">Cancel</button>
       </div>
     </div>
-  </section>
 
-  <p class="empty-message" id="emptyMessage" style="display:none;">
-    You don’t have any reservations at the moment.
-  </p>
+    <div class="res-card">
+      <div class="res-info">
+        <h3>Riyadh Art Festival</h3>
+        <p>Riyadh | Jan 12, 2026</p>
+        <p>Reservation Required</p>
+      </div>
+      <div class="res-actions">
+        <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
+        <button class="cancel-btn">Cancel</button>
+      </div>
+    </div>
+
+    <div class="res-card">
+      <div class="res-info">
+        <h3>Najd Village Restaurant</h3>
+        <p>Riyadh | Dinner for 2 | Jan 13, 2026</p>
+        <p>Amount Due: 450 SAR</p>
+      </div>
+      <div class="res-actions">
+        <button class="btn-small" onclick="goToEventDetails()">Reserve Now</button>
+        <button class="cancel-btn">Cancel</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<p class="empty-message" id="emptyMessage" style="display:none;">
+  You don’t have any reservations at the moment.
+</p>
 </main>
 
 <footer>
