--- a/signup.html
+++ b/signup.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Journy - Sign Up</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .auth-page{min-height:70vh; display:flex; justify-content:center; align-items:center; padding:60px 20px;}
-    .auth-card{width:100%; max-width:520px; background:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,0.1); overflow:hidden;}
-    .auth-head{padding:22px 26px; border-bottom:1px solid #eee;}
-    .auth-head h2{font-family:'Playfair Display',serif; font-size:28px; color:#333;}
-    .auth-body{padding:22px 26px; display:grid; gap:14px;}
-    .form-group{display:grid; gap:6px;}
-    .form-group label{font-weight:600; color:#333;}
-    .form-control{padding:12px 14px; border:1px solid #ddd; border-radius:8px; font-size:15px; outline:none; width:100%;}
-    .form-control:focus{border-color:#ff6b00; box-shadow:0 0 0 3px rgba(255,107,0,0.12);}
-    .helper{font-size:13px; color:#777;}
-    .error{color:#d33; font-size:13px; min-height:1em;}
-    .auth-actions{display:grid; gap:12px; margin-top:6px;}
-    .btn:disabled{opacity:.6; cursor:not-allowed;}
-    nav .nav-links li a.active{color:#ff6b00;}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Journy - Sign Up</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css" />
+
+<!-- Scoped styles — affect this page only -->
+<style>
+  .auth-section{
+    max-width: 680px; margin: 80px auto; background:#fff;
+    border:1px solid rgba(0,0,0,.08); border-radius:12px;
+    padding:40px 30px; box-shadow:0 6px 20px rgba(0,0,0,.08);
+  }
+  .auth-section h2{ font-family:'Playfair Display',serif; font-size:32px; color:#333; text-align:center; margin-bottom:8px }
+  .auth-section .subtitle{ text-align:center; color:#666; margin-bottom:24px; font-size:15px }
+  .auth-section label{ display:block; font-weight:600; color:#333; margin:14px 0 6px }
+  .auth-section .input-wrapper{
+    display:flex; align-items:center; gap:8px; background:#fff;
+    border:1px solid #ddd; border-radius:10px; padding:10px 12px;
+    transition:border-color .2s, box-shadow .2s;
+  }
+  .auth-section .input-wrapper:focus-within{ border-color:#ff6b00; box-shadow:0 0 0 3px rgba(255,107,0,.15) }
+  .auth-section input[type="text"], .auth-section input[type="email"], .auth-section input[type="password"]{
+    width:100%; border:0; outline:0; background:transparent; font-size:16px; color:#333;
+  }
+  .auth-section .peek{ border:0; background:#f5f5f5; color:#555; padding:6px 8px; border-radius:8px; cursor:pointer }
+  .auth-section .peek:hover{ background:#eee }
+  .auth-section .grid-2{ display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-top:8px }
+  .auth-section .checkbox{
+    display:flex; align-items:center; gap:10px; padding:10px 12px; border:1px solid #e9e9e9;
+    border-radius:10px; background:#fafafa; cursor:pointer; user-select:none;
+  }
+  .auth-section .checkbox:hover{ border-color:#ffeadf; background:#fff7f2 }
+  .auth-section .checkbox input{ accent-color:#ff6b00; width:18px; height:18px }
+  .auth-section .pill{
+    display:inline-block; margin-left:6px; padding:2px 8px; border-radius:999px;
+    font-size:12px; color:#ff6b00; background:#fff2e9; border:1px solid #ffe1cc;
+  }
+  .auth-section .note{ color:#777; font-size:13px; margin-top:6px }
+  .auth-section .error{ color:#d93025; font-size:13px; margin-top:6px; display:block }
+  .auth-section .btn{
+    width:100%; margin-top:14px; background:#ff6b00; color:#fff; border:none;
+    border-radius:10px; padding:12px 16px; font-weight:600; cursor:pointer; transition:background .2s;
+  }
+  .auth-section .btn:hover{ background:#e65b00 }
+  .auth-section .btn:disabled{ opacity:.6; cursor:not-allowed }
+  .auth-section .switch{ margin-top:12px; color:#666; font-size:14px; text-align:center }
+  .auth-section .switch a{ color:#ff6b00; text-decoration:underline }
+  @media (max-width:768px){ .auth-section{ margin:50px 16px; padding:30px 20px } .auth-section .grid-2{ grid-template-columns:1fr } }
+</style>
 </head>
 <body>
 <header>
@@ -35,49 +64,47 @@
 </header>
 
 <main>
-  <section class="auth-page">
-    <div class="auth-card">
-      <div class="auth-head">
-        <h2>Create a Journy Account</h2>
+  <section class="auth-section" aria-labelledby="signup-title">
+    <h2 id="signup-title">Create a Journy Account</h2>
+    <p class="subtitle">Join Journy to book events and discover nearby restaurants & hotels.</p>
+
+    <form id="signupForm" novalidate>
+      <label for="name">Full Name</label>
+      <div class="input-wrapper">
+        <input type="text" id="name" placeholder="Enter your name" autocomplete="name" required>
       </div>
-      <form class="auth-body" id="signupForm" novalidate>
-        <div class="form-group">
-          <label for="name">Full Name</label>
-          <input class="form-control" type="text" id="name" placeholder="Enter your name" autocomplete="name" required>
-          <div class="error" id="nameErr"></div>
-        </div>
+      <small class="error" id="nameErr"></small>
 
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input class="form-control" type="email" id="email" placeholder="Enter your email" autocomplete="email" required>
-          <div class="error" id="emailErr"></div>
-        </div>
+      <label for="email">Email</label>
+      <div class="input-wrapper">
+        <input type="email" id="email" placeholder="Enter your email" autocomplete="email" required>
+      </div>
+      <small class="error" id="emailErr"></small>
 
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input class="form-control" type="password" id="password" placeholder="Create a password" minlength="8" required>
-          <div class="helper">At least 8 characters.</div>
-          <div class="error" id="passErr"></div>
-        </div>
+      <label for="password">Password</label>
+      <div class="input-wrapper">
+        <input type="password" id="password" placeholder="Create a password (min 8 char)" minlength="8" required>
+        <button class="peek" type="button" aria-label="Show password" data-target="password">👁</button>
+      </div>
+      <small class="error" id="passErr"></small>
 
-        <div class="form-group">
-          <label for="confirm">Confirm Password</label>
-          <input class="form-control" type="password" id="confirm" placeholder="Re-enter your password" minlength="8" required>
-          <div class="error" id="confirmErr"></div>
-        </div>
+      <label>Account Type</label>
+      <div class="grid-2">
+        <label class="checkbox">
+          <input type="radio" name="role" value="user" checked>
+          <span>User</span> <span class="pill">Book events & explore places</span>
+        </label>
+        <label class="checkbox">
+          <input type="radio" name="role" value="admin">
+          <span>Admin</span> <span class="pill">Manage events & places</span>
+        </label>
+      </div>
 
-        <div class="form-group" style="display:flex;align-items:center;gap:8px;">
-          <input type="checkbox" id="terms" required>
-          <label for="terms" style="font-weight:500;">I agree to the <a href="#" class="link-inline" style="color:#ff6b00;">Terms & Privacy</a></label>
-        </div>
-        <div class="error" id="termsErr"></div>
+      <small class="note">You can switch roles later by contacting support.</small>
 
-        <div class="auth-actions">
-          <button type="submit" class="btn" id="signupBtn" disabled>Sign Up</button>
-          <p class="helper">Already have an account? <a class="link-inline" href="login.html" style="color:#ff6b00;">Login</a></p>
-        </div>
-      </form>
-    </div>
+      <button type="submit" class="btn" id="signupBtn" disabled>Sign Up</button>
+      <p class="switch">Already have an account? <a href="login.html">Login</a></p>
+    </form>
   </section>
 </main>
 
@@ -86,48 +113,50 @@
 </footer>
 
 <script>
-  (function(){
-    const f = document.getElementById('signupForm');
-    const nameI = document.getElementById('name');
-    const emailI = document.getElementById('email');
-    const passI = document.getElementById('password');
-    const confI = document.getElementById('confirm');
-    const terms = document.getElementById('terms');
-    const btn = document.getElementById('signupBtn');
-
-    const nameErr = document.getElementById('nameErr');
-    const emailErr = document.getElementById('emailErr');
-    const passErr = document.getElementById('passErr');
-    const confirmErr = document.getElementById('confirmErr');
-    const termsErr = document.getElementById('termsErr');
-
-    function validate(){
-      let ok = true;
-
-      if(!nameI.value.trim()){ nameErr.textContent='Please enter your full name.'; ok=false; } else { nameErr.textContent=''; }
-      const emailRx = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      if(!emailI.value.trim()){ emailErr.textContent='Please enter your email.'; ok=false; }
-      else if(!emailRx.test(emailI.value)){ emailErr.textContent='Invalid email format.'; ok=false; }
-      else { emailErr.textContent=''; }
-
-      if(!passI.value || passI.value.length<8){ passErr.textContent='Password must be at least 8 characters.'; ok=false; } else { passErr.textContent=''; }
-      if(confI.value!==passI.value){ confirmErr.textContent='Passwords do not match.'; ok=false; } else { confirmErr.textContent=''; }
-
-      if(!terms.checked){ termsErr.textContent='You must agree to the Terms & Privacy.'; ok=false; } else { termsErr.textContent=''; }
-
-      btn.disabled = !ok;
-      return ok;
-    }
-
-    [nameI,emailI,passI,confI,terms].forEach(el=>el.addEventListener('input',validate));
-    f.addEventListener('submit', e=>{
-      e.preventDefault();
-      if(!validate()) return;
-      btn.textContent='Creating account...';
-      btn.disabled=true;
-      setTimeout(()=>{ alert('Account created (frontend demo).'); window.location.href='login.html'; },700);
+  // show/hide password
+  document.querySelectorAll('.peek').forEach(btn=>{
+    btn.addEventListener('click',()=>{
+      const f = document.getElementById(btn.dataset.target);
+      const isPwd = f.type === 'password';
+      f.type = isPwd ? 'text' : 'password';
+      btn.setAttribute('aria-label', isPwd ? 'Hide password' : 'Show password');
     });
-  })();
+  });
+
+  const nameI = document.getElementById('name');
+  const emailI = document.getElementById('email');
+  const passI  = document.getElementById('password');
+  const btn    = document.getElementById('signupBtn');
+
+  function validEmail(v){ return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(v); }
+
+  function validate(){
+    let ok = true;
+    document.getElementById('nameErr').textContent  = '';
+    document.getElementById('emailErr').textContent = '';
+    document.getElementById('passErr').textContent  = '';
+
+    if(!nameI.value.trim()){ document.getElementById('nameErr').textContent='Please enter your full name.'; ok=false; }
+    if(!emailI.value.trim()){ document.getElementById('emailErr').textContent='Please enter your email.'; ok=false; }
+    else if(!validEmail(emailI.value)){ document.getElementById('emailErr').textContent='Invalid email format.'; ok=false; }
+    if(passI.value.length < 8){ document.getElementById('passErr').textContent='Password must be at least 8 characters.'; ok=false; }
+    btn.disabled = !ok;
+    return ok;
+  }
+  [nameI,emailI,passI].forEach(i=>i.addEventListener('input',validate)); validate();
+
+  document.getElementById('signupForm').addEventListener('submit', e=>{
+    e.preventDefault();
+    if(!validate()) return;
+
+    const role = (document.querySelector('input[name="role"]:checked')||{}).value || 'user';
+    const user = { name: nameI.value.trim(), email: emailI.value.trim(), role };
+    localStorage.setItem('journy_user', JSON.stringify(user));
+
+    // ستاتيك: دايمًا نروح للـ index.html
+    window.location.href = 'index.html';
+  });
 </script>
+
 </body>
 </html>
