--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <h2>Featured Events</h2>
     <div class="cards-row">
       <div class="card"><img src="image/MDLBEAST.jpg" alt=""><h3>Riyadh Music Festival</h3><p>March 15, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/Formula.jpg" alt=""><h3>Formula 1 Grand Prix</h3><p>April 2, 2026 | Jeddah</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/Formula.jpg" alt=""><h3>Formula 1 Grand Prix</h3><p>April 2, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
       <div class="card"><img src="image/boulevardw.jpg" alt=""><h3>Boulevard World</h3><p>Dec 5-25, 2025 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/AlUla.png" alt=""><h3>AlUla Culture Week</h3><p>Jan 10, 2026 | AlUla</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/AlUla.png" alt=""><h3>AlUla Culture Week</h3><p>Jan 10, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
     </div>
   </section>
 
@@ -68,8 +68,8 @@
     <h2>Recommended Hotels</h2>
     <div class="cards-row">
       <div class="card"><img src="image/ritz.jpg" alt=""><h3>Ritz-Carlton</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Jeddah</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/AlUlaH.webp" alt=""><h3>AlUla Heritage Suites</h3><p>AlUla</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/AlUlaH.webp" alt=""><h3>AlUla Heritage Suites</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
       <div class="card"><img src="image/FourSeasons.webp" alt=""><h3>Four Seasons</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
     </div>
   </section>
