--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Journy - Home</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 
 <style>
@@ -29,7 +30,7 @@
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="discover.html">Discover</a></li>
+      <li><a href="discover.html">Disvover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
       <li><a href="login.html">log in</a></li>
@@ -39,7 +40,7 @@
   <div class="hero">
     <h1>Discover Amazing Events Across Saudi Arabia</h1>
     <p>Plan your trips, book tickets, and explore local experiences effortlessly</p>
-    <a href="discover.html" class="btn">Explore Events</a>
+    <a href="events.html" class="btn">Explore Events</a>
   </div>
 </header>
 
@@ -50,27 +51,27 @@
       <div class="card"><img src="image/MDLBEAST.jpg" alt=""><h3>Riyadh Music Festival</h3><p>March 15, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
       <div class="card"><img src="image/Formula.jpg" alt=""><h3>Formula 1 Grand Prix</h3><p>April 2, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
       <div class="card"><img src="image/boulevardw.jpg" alt=""><h3>Boulevard World</h3><p>Dec 5-25, 2025 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/AlUla.png" alt=""><h3>AlUla Culture Week</h3><p>Jan 10, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/Exop.jpg" alt=""><h3>Expo 2030</h3><p>Jan 10, 2030 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
     </div>
   </section>
 
   <section class="featured-restaurants">
     <h2>Recommended Restaurants</h2>
     <div class="cards-row">
-      <div class="card"><img src="image/TheGlobe.jpg" alt=""><h3>The Globe</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/lazycat.webp" alt=""><h3>Lazy Cat</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/public.jpg" alt=""><h3>Public</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/oulu.jpg" alt=""><h3>Oulu</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/TheGlobe.jpg" alt=""><h3>The Globe</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/lazycat.webp" alt=""><h3>Lazy Cat</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/public.jpg" alt=""><h3>Public</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/oulu.jpg" alt=""><h3>Oulu</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
     </div>
   </section>
 
   <section class="featured-hotels">
     <h2>Recommended Hotels</h2>
     <div class="cards-row">
-      <div class="card"><img src="image/ritz.jpg" alt=""><h3>Ritz-Carlton</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/AlUlaH.webp" alt=""><h3>AlUla Heritage Suites</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
-      <div class="card"><img src="image/FourSeasons.webp" alt=""><h3>Four Seasons</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/ritz.jpg" alt=""><h3>Ritz-Carlton</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/doubletree.webp" alt=""><h3>Double Tree</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/FourSeasons.webp" alt=""><h3>Four Seasons</h3><p>Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
     </div>
   </section>
 </main>
