--- a/discover.html
+++ b/discover.html
@@ -73,6 +73,7 @@
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
       <li><a href="admin.html">Admin</a></li>
+      <li><a href="login.html">Log Out</a></li>
     </ul>
   </nav>
 </header>
