--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="discover.html">Disvover</a></li>
+      <li><a href="discover.html">Discover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
-      <li><a href="login.html">log in</a></li>
+      <li><a href="admin.html">Admin</a></li>
+      <li><a href="login.html">Log in</a></li>
     </ul>
   </nav>
 
