--- a/reservations.html
+++ b/reservations.html
@@ -103,7 +103,8 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="discover.html">Discover</a></li>
       <li><a href="planner.html">Planner</a></li>
-      <li><a href="reservations.html" class="active">Reservations</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="admin.html">Admin</a></li>
       <li><a href="login.html">Log Out</a></li>
     </ul>
   </nav>
