--- a/admin.html
+++ b/admin.html
@@ -112,6 +112,10 @@
   <nav>
     <div class="logo">Journy Admin</div>
     <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="discover.html">Discover</a></li>
+      <li><a href="planner.html">Planner</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
       <li><a href="admin.html">Admin</a></li>
     </ul>
   </nav>
