--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="discover.html">Discover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="admin.html">Admin</a></li>
       <li><a href="login.html">Log in</a></li>
     </ul>
   </nav>
